some spacing fix

--- a/src/css/content.scss
+++ b/src/css/content.scss
@@ -10,6 +10,10 @@
     height: auto;
   }
 
+  p {
+    margin-top: 0;
+  }
+
   embed-container {
     position: relative;
     padding-bottom: 56.25%;
